Finished Lousy War Focus Branch (minus 2)

--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -1807,3 +1807,24 @@
    GLO_war.5.t:0 "[From.GetName] declines our invite!"
    GLO_war.5.d:0 "[From.GetName] has decided that they will not join us in our fight against our enemies."
    GLO_war.5.a:0 "How disappointing."
+   GLO_war.6.t:0 "Ultimatum from St. Gloriana"
+   GLO_war.6.d:0 "Urgent News! We have received an ultimatum from St. Gloriana that we are to submit to their academy and bow down to them due to the conflict they fight. Though we are a free, independent school, we at [Root.GetName] have never had to endure such mockery, yet against such a prestigious academy, we may not have a choice."
+   GLO_war.6.a:0 "We can only hope to submit"
+   GLO_war.6.b:0 "Damn Gloriana, we shall stand by ourselves no matter what!"
+   GLO_war.7.t:0 "[From.GetName] has submitted to us!"
+   GLO_war.7.d:0 "[From.GetName] has chosen the wise choice to submit themselves to our great academy. They shall prove valuable to the war effort."
+   GLO_war.7.a:0 "A toast to our new loyal subjects!"
+   GLO_war.8.t:0 "[From.GetName] has defied us!"
+   GLO_war.8.d:0 "[From.GetName] has refused our ultimatum and has rallied against us! We cannot let them collude against our enemies!"
+   GLO_war.8.a:0 "[From.GetName] has left us with no other choice!"
+ ##GLORIANA DECISIONS##
+   GLO_air_battle:0 "The Battle in the Air"
+   GLO_airatk_increase:0 "Promote Aggression"
+   GLO_airatk_increase_desc:0 "Aggression in the air allows us to keep up with our enemies, and ensure we are able to deal much more damage to them."
+   GLO_airdef_increase:0 "Promote Defense"
+   GLO_airdef_increase_desc:0 "The best offense is a good defense. Let's make sure our pilots know this."
+   GLO_log_battle:0 "The Logistical Battle"
+   GLO_tea:0 "Tea For All!"
+   GLO_tea_desc:0 "Nothing like a good cup of tea for everyone to enjoy. Tea is our pride and joy!"
+   GLO_air_increase:0 " Agenda not yet promoted"
+   GLO_tea_increase:0 " Tea Restocked"
