--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3567,7 +3567,7 @@
     ENG_meeting_with_tea:0 "Meeting With Tea"
     ENG_meeting_with_tea_desc:0 "As the time for Earl Grey's leadership is almost coming to its end, she called for the student council on her next move as the commander."
     ENG_tea_is_poured:0 "Tea is Poured"
-    ENG_tea_is_poured_desc:0 "Earl Grey has officially stepped down as the commander of Gloriana's Senshadou team. It is time for her to decide who shall take her place."
+    ENG_tea_is_poured_desc:0 "Earl Grey has decided that she will be stepping down. We await only who she enacts as the next commandant for our Sensha-dou Team"
     ENG_choose_darj:0 "Choose Darjeeling"
     ENG_choose_darj_desc:0 "Darjeeling has always been the student of Earl Grey ever since she first set foot on the team. Now is the time for her to take the helm, and carry on her legacy!"
     ENG_choose_rose:0 "Choose Rosehip"
@@ -3670,6 +3670,8 @@
     ENG_Opening_Home_Office_desc:0 "With the opening of hostilities against ourselves, we must make the decision to expand the civil service from a normally troublesome section of the school council, into a far more dynamic force. Though we can't count on their loyalty, we can on their duty to Queen and Country."
     ENG_Battle_of_Logistics:0 "Battle of Logistics"
     ENG_Battle_of_Logistics_desc:0 "The other schools march on their stomachs. We, St. Gloriana, march with elegance, our tea in hand, and nothing motivates our lads more than a good brew with some biscuits and a nice blanket. With a proper logistical system, we can ensure our morale is at an all time high, and we shall punch through anyone who stands in our way."
+    ENG_Battle_of_Air:0 "Battle of the Air"
+    ENG_Battle_of_Air_desc:0 "Orange Pekoe, Lord Marshal of the airforce, has quite bluntly, informed parliament that she could not uarantee the safety of the channel, and thus, will be taking complete power over all of coastal command and fighter command to ensure that she could muster all available support to her actions."
     ENG_Certain_Eventuality:0 "Certain Eventuality"
     ENG_Certain_Eventuality_desc:0 "B.C Freedom has fallen. With her downfall, we stand alone in the continent, with only the seas to protect us from our growing enemy. These are dark times, and we must inform everyone of what will happen should the seas fail to protect us, and we must do whatever is necessary to prevail."
     ENG_Like_Beans_on_Toast:0 "Like Beans on Toast"
