Added 2 new Icons

--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -1777,46 +1777,54 @@
 
 ### GLORIANA ###
  ##GLORIANA EVENTS##
-   GLO_choice.1.t:0 "Earl Grey Retires as Gloriana's Commander!"
-   GLO_choice.1.d:0 "Earl Grey, our commandant, has officially stepped down from her position. Her way of Tankery was the key to our victory in the 62nd Tournament. Though not so elegant, it has proven effective, and as such, we mourn the loss of our great commandant. All is not lost however as two candidates have risen up to take the mantle - Earl Grey's student herself, Darjeeling, who had been under her wing for two years, and Rosehip, a 1st year student who shares the boldness of our former commandant."
-   GLO_choice.1.a:0 "Darjeeling has been her student her entire stay. She is our best candidate."
-   GLO_choice.1.b:0 "Rosehip follows Earl Grey's Way of Tankery. She will lead us to glory!"
-   GLO_darj.1.t:0 "Chi-Ha-Tan-Gloriana Naval Treaty"
-   GLO_darj.1.d:0 "Our naval prowess grows stronger by the second! Gloriana is well aware of our ever increasing power, and has sent us a proposal for us to reduce our naval power in exchange for their islands."
-   GLO_darj.1.a:0 "It will not be wise to make more enemies."
-   GLO_darj.1.b:0 "A tempting offer, but we will not bow to anybody."
-   GLO_darj.2.t:0 "Chi-Ha-Tan Signs the Treaty!"
-   GLO_darj.2.d:0 "Chi-Ha-Tan has agreed to our terms that they will decrease their naval capacity in exchange for our islands. With this treaty, the threat of war on the East should not be as prevelant, however we must still remain vigilant against them."
-   GLO_darj.2.a:0 "To friendship between the two schools!"
-   GLO_darj.3.t:0 "Chi-Ha-Tan Rejects the Treaty!"
-   GLO_darj.3.d:0 "Chi-Ha-Tan has decided to reject our fair terms and continue to build up their power in the Orient! This act of defiance against our power proves their lack of will to negotiate any form of concessions or peace what so ever. We must prepare ourselves in the future should they attack us."
-   GLO_darj.3.a:0 "Chi-Ha-Tan has brought this upon themselves."
-   GLO_war.1.t:0 "Rosehip Secures Alisa's Endorsement"
-   GLO_war.1.d:0 "In Rosehip's trip to Saunders, during a speech at the All Stars' Academy, Alisa stepped onto the stage and announced her endorsement to the St. Gloriana war effort. Despite the sudden interruption, the endorsement has spread positively throughout Saunders due to Alisa's boldness, and public opinion to Saunders' interventionism has increased dramatically."
-   GLO_war.1.a:0 "Saunders will be our key to victory!"
-   GLO_war.2.t:0 "Rosehip Visits Saunders, Alisa Secures Endorsement"
-   GLO_war.2.d:0 "During Rosehip's visit to our school at a speech in the All Stars' Academy, Alisa stepped onto the stage and announced her endorsement to the St. Gloriana war effort. Despite the sudden interruption, the endorsement has spread positively throughout our students due her boldness. The students calling for interventionism has increased dramatically."
-   GLO_war.2.a:0 "Let us not abandon our allies in their time of need!"
-   GLO_war.3.t:0 "Standing Together in a Free World!"
-   GLO_war.3.d:0 "St.Gloriana has approached our school with the idea that with the conflict brewing, we must stand as one in order to maintain a Free World! Accepting this means we are to send our students to Europe and Asia, far from our own homes."
-   GLO_war.3.a:0 "We must do our part to maintain a Free World!"
-   GLO_war.3.b:0 "This does not concern us"
-   GLO_war.4.t:0 "[From.GetName] accepts our invite!"
-   GLO_war.4.d:0 "[From.GetName] has decided to stand with us in our fight against tyranny."
-   GLO_war.4.a:0 "Together, we stand as one!"
-   GLO_war.5.t:0 "[From.GetName] declines our invite!"
-   GLO_war.5.d:0 "[From.GetName] has decided that they will not join us in our fight against our enemies."
-   GLO_war.5.a:0 "How disappointing."
-   GLO_war.6.t:0 "Ultimatum from St. Gloriana"
-   GLO_war.6.d:0 "Urgent News! We have received an ultimatum from St. Gloriana that we are to submit to their academy and bow down to them due to the conflict they fight. Though we are a free, independent school, we at [Root.GetName] have never had to endure such mockery, yet against such a prestigious academy, we may not have a choice."
-   GLO_war.6.a:0 "We can only hope to submit"
-   GLO_war.6.b:0 "Damn Gloriana, we shall stand by ourselves no matter what!"
-   GLO_war.7.t:0 "[From.GetName] has submitted to us!"
-   GLO_war.7.d:0 "[From.GetName] has chosen the wise choice to submit themselves to our great academy. They shall prove valuable to the war effort."
-   GLO_war.7.a:0 "A toast to our new loyal subjects!"
-   GLO_war.8.t:0 "[From.GetName] has defied us!"
-   GLO_war.8.d:0 "[From.GetName] has refused our ultimatum and has rallied against us! We cannot let them collude against our enemies!"
-   GLO_war.8.a:0 "[From.GetName] has left us with no other choice!"
+
+   ##CHOOSING LEADER##
+     GLO_choice.1.t:0 "Earl Grey Retires as Gloriana's Commander!"
+     GLO_choice.1.d:0 "Earl Grey, our commandant, has officially stepped down from her position. Her way of Tankery was the key to our victory in the 62nd Tournament. Though not so elegant, it has proven effective, and as such, we mourn the loss of our great commandant. All is not lost however as two candidates have risen up to take the mantle - Earl Grey's student herself, Darjeeling, who had been under her wing for two years, and Rosehip, a 1st year student who shares the boldness of our former commandant."
+     GLO_choice.1.a:0 "Darjeeling has been her student her entire stay. She is our best candidate."
+     GLO_choice.1.b:0 "Rosehip follows Earl Grey's Way of Tankery. She will lead us to glory!"
+
+   ##DARJEELING CHOICES##
+     GLO_darj.1.t:0 "Chi-Ha-Tan-Gloriana Naval Treaty"
+     GLO_darj.1.d:0 "Our naval prowess grows stronger by the second! Gloriana is well aware of our ever increasing power, and has sent us a proposal for us to reduce our naval power in exchange for their islands."
+     GLO_darj.1.a:0 "It will not be wise to make more enemies."
+     GLO_darj.1.b:0 "A tempting offer, but we will not bow to anybody."
+     GLO_darj.2.t:0 "Chi-Ha-Tan Signs the Treaty!"
+     GLO_darj.2.d:0 "Chi-Ha-Tan has agreed to our terms that they will decrease their naval capacity in exchange for our islands. With this treaty, the threat of war on the East should not be as prevelant, however we must still remain vigilant against them."
+     GLO_darj.2.a:0 "To friendship between the two schools!"
+     GLO_darj.3.t:0 "Chi-Ha-Tan Rejects the Treaty!"
+     GLO_darj.3.d:0 "Chi-Ha-Tan has decided to reject our fair terms and continue to build up their power in the Orient! This act of defiance against our power proves their lack of will to negotiate any form of concessions or peace what so ever. We must prepare ourselves in the future should they attack us."
+     GLO_darj.3.a:0 "Chi-Ha-Tan has brought this upon themselves."
+   
+   ##LOUSY WAR
+     GLO_war.1.t:0 "Rosehip Secures Alisa's Endorsement"
+     GLO_war.1.d:0 "In Rosehip's trip to Saunders, during a speech at the All Stars' Academy, Alisa stepped onto the stage and announced her endorsement to the St. Gloriana war effort. Despite the sudden interruption, the endorsement has spread positively throughout Saunders due to Alisa's boldness, and public opinion to Saunders' interventionism has increased dramatically."
+     GLO_war.1.a:0 "Saunders will be our key to victory!"
+     GLO_war.2.t:0 "Rosehip Visits Saunders, Alisa Secures Endorsement"
+     GLO_war.2.d:0 "During Rosehip's visit to our school at a speech in the All Stars' Academy, Alisa stepped onto the stage and announced her endorsement to the St. Gloriana war effort. Despite the sudden interruption, the endorsement has spread positively throughout our students due her boldness. The students calling for interventionism has increased dramatically."
+     GLO_war.2.a:0 "Let us not abandon our allies in their time of need!"
+     GLO_war.3.t:0 "Standing Together in a Free World!"
+     GLO_war.3.d:0 "St.Gloriana has approached our school with the idea that with the conflict brewing, we must stand as one in order to maintain a Free World! Accepting this means we are to send our students to Europe and Asia, far from our own homes."
+     GLO_war.3.a:0 "We must do our part to maintain a Free World!"
+     GLO_war.3.b:0 "This does not concern us"
+     GLO_war.4.t:0 "[From.GetName] accepts our invite!"
+     GLO_war.4.d:0 "[From.GetName] has decided to stand with us in our fight against tyranny."
+     GLO_war.4.a:0 "Together, we stand as one!"
+     GLO_war.5.t:0 "[From.GetName] declines our invite!"
+     GLO_war.5.d:0 "[From.GetName] has decided that they will not join us in our fight against our enemies."
+     GLO_war.5.a:0 "How disappointing."
+     GLO_war.6.t:0 "Ultimatum from St. Gloriana"
+     GLO_war.6.d:0 "Urgent News! We have received an ultimatum from St. Gloriana that we are to submit to their academy and bow down to them due to the conflict they fight. Though we are a free, independent school, we at [Root.GetName] have never had to endure such mockery, yet against such a prestigious academy, we may not have a choice."
+     GLO_war.6.a:0 "We can only hope to submit"
+     GLO_war.6.b:0 "Damn Gloriana, we shall stand by ourselves no matter what!"
+     GLO_war.7.t:0 "[From.GetName] has submitted to us!"
+     GLO_war.7.d:0 "[From.GetName] has chosen the wise choice to submit themselves to our great academy. They shall prove valuable to the war effort."
+     GLO_war.7.a:0 "A toast to our new loyal subjects!"
+     GLO_war.8.t:0 "[From.GetName] has defied us!"
+     GLO_war.8.d:0 "[From.GetName] has refused our ultimatum and has rallied against us! We cannot let them collude against our enemies!"
+     GLO_war.8.a:0 "[From.GetName] has left us with no other choice!"
+
+
  ##GLORIANA DECISIONS##
    GLO_air_battle:0 "The Battle in the Air"
    GLO_airatk_increase:0 "Promote Aggression"
