--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -1795,6 +1795,18 @@
      GLO_darj.3.t:0 "Chi-Ha-Tan Rejects the Treaty!"
      GLO_darj.3.d:0 "Chi-Ha-Tan has decided to reject our fair terms and continue to build up their power in the Orient! This act of defiance against our power proves their lack of will to negotiate any form of concessions or peace what so ever. We must prepare ourselves in the future should they attack us."
      GLO_darj.3.a:0 "Chi-Ha-Tan has brought this upon themselves."
+     GLO_darj.4.t:0 "The Tea-Beer Agreement."
+     GLO_darj.4.d:0 "The Academy of St. Gloriana Girls College has sent us a treaty. They are to accept the current borders of our school in return for us to not enact any aggressive expansion elsewhere in Europe. With this, we would have to accept our current borders in the times to come, yet perhaps this is what our former commandant, Maho Nishizumi, would of wanted."
+     GLO_darj.4.a:0 "Let us honour our former commandant's wishes!"
+     GLO_darj.4.b:0 "To hell with this, Europe will be ours!"
+     GLO_darj.5.t:0 "The Tea-Beer Agreement Signed!"
+     GLO_darj.5.d:0 "Wonderful news, [ROOT.GetLeader]! We have received an official response from Kuromorimine, where they have agreed to the terms of the treaty! It is a wonderful day for our academy and the world!"
+     GLO_darj.5.a:0 "We can only hope they keep to their word."
+     GLO_darj.6.t:0 "The Tea-Beer Agreement Denied!"
+     GLO_darj.6.d:0 "Terrible news, [ROOT.GetLeader]! We have recieved an official response from Kuromorimine, where they have refused to agree to the terms of the treaty! This is a clear sign they refuse to negotiate what so ever!"
+     GLO_darj.6.a:0 "They leave us no choice, then!"
+     GLO_darj.7.t:0 "St. Gloriana requests we withdraw from Zhongguo!"
+     GLO_darj.7.d:0 ""
    
    ##LOUSY WAR
      GLO_war.1.t:0 "Rosehip Secures Alisa's Endorsement"
