--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3487,7 +3487,7 @@
     ENG_sorry_state:0 "A Sorry State"
     ENG_sorry_state_desc:0 "The Empire's victory in the last tournament has nonetheless left our team in a dire condition."
     ENG_defence_spending:0 "Defense Spending Increases"
-    ENG_defence_spending_desc:0 "The school is noswhere prepared to mount its own self-protection. WIth Kuromorimine's aggressive actions, it is time to invest in our defense."
+    ENG_defence_spending_desc:0 "The school is nowhere prepared to mount its own self-protection. WIth Kuromorimine's aggressive actions, it is time to invest in our defense."
     ENG_global_sorties:0 "Expanding Global Sorties"
     ENG_global_sorties_desc:0 "The Royal Navy remains our strongest tool and the envy of the world. Global exercises of its strength may cow those who doubt our capabilities."
     ENG_limited_liability:0 "Limited Liability"
@@ -3495,7 +3495,7 @@
     ENG_royal_navy_budget:0 "Royal Navy Budget Injection"
     ENG_royal_navy_budget_desc:0 "In light of Kuromorimine's investments to her navy, additional funding must be given to modernize our own ships."
     ENG_shadow_factories:0 "Shadow Factories"
-    ENG_shadow_factories_desc:0 "With the 63rd tournament looming in the distnace, it is necessary we increase our manufacturing capacity. Constructing new factories will be untimely and slow. Using current ones may prove to be fruitful"
+    ENG_shadow_factories_desc:0 "With the 63rd tournament looming in the distance, it is necessary we increase our manufacturing capacity. Constructing new factories will be untimely and slow. Using current ones may prove to be fruitful"
     ENG_royal_navy_requisition:0 "Royal Navy Requisition Service"
     ENG_royal_navy_requisition_desc:0 "The current navy is not enough for even an adequete defense. Turning to the public may prove beneficial for us."
     ENG_heart_of_oak:0 "Heart of Oak"
