Military Focus (Few Missing)

--- a/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_events_decisions_l_english.yml
@@ -1785,6 +1785,9 @@
    GLO_mil.2.t:0 "The Team's Sorry State"
    GLO_mil.2.d:0 "[ROOT.GetLeader]! We regret to inform you that, despite Earl Grey's excellent leadership, our team has seen better days after the 62nd Tournament. Our tactics are outdated and our equipment could be better. While we admire Earl Grey's leadership, she has unfortunately failed to address the state she left the team in, and it has now fallen under your responsibility to fix this."
    GLO_mil.2.a:0 "St. Gloriana will be reborn anew!"
+   GLO_mil.3.t:0 "Antrhax Outbreak!"
+   GLO_mil.3.d:0 "[ROOT.GETLeader]! We have bad news! It turns out a new shipment of food has been infected with Anthrax! Not only is our team suffering because of it, but it seems the rest of the academy has officially fallen ill and a massive outbreak has broken out within' the school! Quarantine measure are already in place. We have discovered that Gloriana were the ones behind this outbreak, poisoning the very food we eat!"
+   GLO_mil.3.a:0 "Has [FROM.GetLeader] no regard for life? We will not be so kind to them when we get there!"
    
    ##CHOOSING LEADER##
      GLO_choice.1.t:0 "Earl Grey Retires as Gloriana's Commander!"
@@ -1891,9 +1894,39 @@
    GLO_tea_desc:0 "Nothing like a good cup of tea for everyone to enjoy. Tea is our pride and joy!"
    GLO_air_increase:0 " Agenda not yet promoted"
    GLO_tea_increase:0 " Tea Restocked"
+   GLO_maple_annex:0 "Taking over Maple"
+   GLO_maple_annex_desc:0 "In the event we lose London, where our defeat is inevitable, we must do everything we can to continue the fight. Maple is our best place to escape, but we must take full control over the school to do so."
+   GLO_annexation:0 "Annex Maple"
+   GLO_annexation_desc:0 "Desperate times come for desparate measures, we must take action!"
+   GLO_requisition_ship:0 "Ship Requisitions"
+   GLO_requisition_destroyer:0 "Convert ship to destroyer"
+   GLO_requisition_cruiser:0 "Convert ship to cruiser"
+   GLO_requisition_carrier:0 "Convert ship to carrier"
+   GLO_requisition_convoy:0 "Acquire ships for convoys"
+   GLO_build_mil:0 "Build Military Factories"
+   GLO_build_mil_desc:0 "We must do our best to exploit the temporary funding we have acquired to build as many military factories as we can!"
+   GLO_build_london:0 "Construct a Military Factory in London"
+   GLO_build_ni:0 "Construct a Military Factory in Northern Ireland"
+   GLO_build_scot:0 "Construct a Military Factory in Scotland"
  
  ##GLORIANA IDEAS/MODIFIERS
    GLO_chose_darj:0 "Earl Grey's Apprentince"
    GLO_railways_act:0 "1936 Railways Act"
    GLO_Harvard:0 "Harvard Research"
    CHI_chiglo_treaty:0 "Chi-Ha-Tan-Gloriana Treaty"
+   GLO_dominions_recruited:0 "Commonwealth Recruitment Program"
+   GLO_lousy_war:0 "A Lousy War"
+   GLO_lousy_war_desc:0 "The 62nd Senshadou tournament was a lot far more terrible than anyone could have imagined. None of the former tournaments have been as bloody and brutal as this one. Many of our own students have thus become disillusioned with joining the team, and we must make sure to never allow something like this to happen again."
+   GLO_over_hills:0 "Over the Hills"
+   GLO_bitterness:0 "Gloriana Bitterness"
+   GLO_army_reborn:0 "Gloriana's Team Reborn"
+   GLO_army_reborn_desc:0 "Gloriana's Team has been remade, where the faults Earl Grey failed to mention have not only been fixed, but also vastly improved upon. It's time for the rest of the world to the elegance of St. Gloriana GIrls College!"
+   KMM_anthrax_outbreak:0 "Anthrax Outbreak"
+   KMM_anthrax_outbreak_desc:0 "Recent food shipments had been infected with a deadly spore disease known as 'Anthrax'. Many of our own students have fallen ill and even died because of this, and Gloriana is all we have to blame!"
+   GLO_hms_service:0 "Secret Service Improvement Program"
+   GLO_underfunded_navy:0 "Underfunded Navy"
+   GLO_Inflation:0 "Unapid Debts"
+   GLO_Inflation_desc:0 "The 62nd Senshadou Tournament has caused problems in our funding, where we had to gather debts in order to continue the fight. Our school now has to take top priority to repay our debts, unless we succumb to many issues that may come."
+   GLO_Inflation_2:0 "Partial Debt Payments"
+   GLO_Inflation_3:0 "Near Complete Debt Payments"
+   GLO_defence_increase:0 "Funding Increase"
