--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3512,6 +3512,8 @@
     ENG_Lion_Roars_desc:0 "The time for our military to shine is now, in its finest moment, to defend the greatest threat to our school since the last tournament."
     ENG_Captain_Best:0 "Captain Does Her Best"
     ENG_Captain_Best_desc:0 "Our captain, [Root.GetLeader] will attempt to rally some of the best commanders and soldiers our prestigious school has to offer!"
+    ENG_dominion_recruit:0 "Expanded Dominion Recruitment"
+    ENG_dominion_recruit_desc:0 "We are not the only school who needs to recruit more students to the team. It is time we let our dominions promote to their own students to join the team!"
     ENG_chain_home:0 "Chain Home Defense Network"
     ENG_chain_home_desc:0 "The latest technology advancements in radar shall aid us in our defenses. Construction of these new facilities is paramount to our security against Kuromorimine!"
     ENG_air_ministry:0 "Air Ministry Reshuffling"
