New Superevent (ww2 start, needs fixing)

--- a/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
+++ b/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
@@ -3,3 +3,6 @@
 GUP_SuperEvents_Test_Title:0 "Test"
 GUP_SuperEvents_Test_Body:0 "Bill, you are very kind, but I dont want to sign up anyhwere \n\n-Mr.Glockner"
 GUP_SuperEvents_Test_Remark:0 "Mr.Gates"
+GUP_SuperEvents_63rd_Title:0 "The 63rd\nSenshadou Tournament"
+GUP_SuperEvents_63rd_Body:0 "It has begun. The 63rd Tournament has officially begun. With tensions in Europe running high, and Kuromorimine's expansion out of control, it is no surprise that [GER.GetLeader] has found herself in a war against the major schools. Though it has always been tradition, the tournaments have recently become much more brutal. The 63rd Tournament may become the bloodiest we have known, and we might never know what will happen afterwards."
+GUP_SuperEvents_63rd_Remark:0 "It's time our tanks set into action again!"
