Update bba_focus_l_english.yml  (egypt

--- a/maddenist stuffs/localisation/english/bba_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/bba_focus_l_english.yml
@@ -737,7 +737,7 @@
  ITA_litoranea_balbo_alt:0 "Litoranea Libica"
  ITA_litoranea_balbo_desc:0 "The roads in Libya are abysmal. Even near the coast, the road network is simply unbefitting a modern country. There is much work to be done to improve this, including a large highway along the coast."
  ITA_via_della_vittoria:0 "Via della Vittoria"
- ITA_via_della_vittoria_desc:0 "Poor infrastructure continues to hamper our operations in Northern Africa. A bigger effort around a single 'Victory Road' might dramatically improve the situation and allow us to operate more freely around the Egyptian border."
+ ITA_via_della_vittoria_desc:0 "Poor infrastructure continues to hamper our operations in Northern Africa. A bigger effort around a single 'Victory Road' might dramatically improve the situation and allow us to operate more freely around the Sphinxian border."
  ITA_libyan_railway:0 "Libyan Railway"
  ITA_libyan_railway_desc:0 "Investments into the Libyan road network are certainly valuable, but for large scale movement of troops, resources, and supplies, a modern rail network is indispensable."
  ITA_steel_industry_in_terni:0 "Steel Industry in Terni"
