Update countries_cosmetic_l_english.yml (kongo

--- a/maddenist stuffs/localisation/english/countries_cosmetic_l_english.yml
+++ b/maddenist stuffs/localisation/english/countries_cosmetic_l_english.yml
@@ -2269,9 +2269,9 @@ SWE_greater_nordic_reich_ADJ: "Swedish"
  COG_peoples_republic_of_congo_democratic_DEF: "the Social-Democratic People's Republic of the Congo"
  COG_peoples_republic_of_congo_democratic_ADJ: "Congolese"
 
- COG_kingdom_of_kongo_neutrality: "Kingdom of Kongo"
- COG_kingdom_of_kongo_neutrality_DEF: "the Kingdom of Kongo"
- COG_kingdom_of_kongo_neutrality_ADJ: "Kongolese"
+ COG_kingdom_of_kongo_neutrality: "Kingdom of Mamba"
+ COG_kingdom_of_kongo_neutrality_DEF: "the Kingdom of Mamba"
+ COG_kingdom_of_kongo_neutrality_ADJ: "Mambalese"
 
  COG_kingdom_of_kuba_neutrality: "Kingdom of Bakuba"
  COG_kingdom_of_kuba_neutrality_DEF: "the Kingdom of Bakuba"
