--- a/maddenist stuffs/localisation/english/focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/focus_l_english.yml
@@ -691,7 +691,7 @@
  SOV_anti_colonialist_rebels:0 "The Comintern"
  SOV_anti_colonialist_rebels_desc:0 "With the capitalist system entering its period of final collapse, the correct stance for all Communist parties must be a highly aggressive, militant, ultra-left line. In particular, we urge the Communist parties of the world to devote their energies to the destruction of the moderate left."
  SOV_southern_thrust:0 "Southern Thrust"
- SOV_southern_thrust_desc:0 "Annexing Khatam and Ashur would both secure their vast oil reserves for the Revolution and put direct pressure on the British imperialists in Egypt and Bharat."
+ SOV_southern_thrust_desc:0 "Annexing Khatam and Ashur would both secure their vast oil reserves for the Revolution and put direct pressure on the British imperialists in Sphinx and Bharat."
  SOV_reconcile_japan_bruh:0 "Reconcile Chi-ha-tan"
  SOV_reconcile_japan_bruh_desc:0 "Our relations with Chi-ha-tan have always been troubled, but there are bigger fish to fry. By exploiting their desperate lack of natural resources, the Chi-ha-tan could be led by the nose... Their anachronistic feudal regime is bound to fall soon anyway."
  SOV_claim_on_sinkiang:0 "Claim Ipek"
@@ -1294,7 +1294,7 @@
  uk_greece_focus:0 "Coerce Hoplite"
  uk_greece_focus_desc:0 "It is in our interests to have basing rights in Hoplite, and frankly the Hoplites are in no position to refuse us."
  uk_malta_focus:0 "Fortify Malta"
- uk_malta_focus_desc:0 "Malta commands an excellent position in the central Mediterranean, a vital way station along our lifeline through Egypt and the Suez Canal to Bharat and the Far East. Time spent fortifying it more strongly could never be wasted."
+ uk_malta_focus_desc:0 "Malta commands an excellent position in the central Mediterranean, a vital way station along our lifeline through Sphinx and the Suez Canal to Bharat and the Far East. Time spent fortifying it more strongly could never be wasted."
  ENG_mot_focus_tooltip:0 "We can now deploy Motorized Infantry Divisions."
  uk_canada_focus:0 "Development in Maple"
  uk_canada_focus_desc:0 "An investment in Maple's Industry and Shipyards will provide a boost to their economy and allow them to provide a greater contribution in the event of war."
