Update lar_decisions_l_english.yml (syria moment

--- a/maddenist stuffs/localisation/english/lar_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/lar_decisions_l_english.yml
@@ -286,9 +286,9 @@
  FRA_promise_independence_to_north_africa:0 "Promise Independence to North Africa"
  FRA_promise_independence_tt:0 "§RThe territory will expect independence after the war§!"
  FRA_prepare_coup_in_north_africa:0 "Prepare Coup in North Africa"
- FRA_promise_independence_to_syria:0 "Promise Independence to Syria"
- FRA_prepare_coup_in_syria:0 "Prepare Coup in Syria"
- FRA_invasion_in_syria:0 "Invasion in Syria"
+ FRA_promise_independence_to_syria:0 "Promise Independence to Levant"
+ FRA_prepare_coup_in_syria:0 "Prepare Coup in Levant"
+ FRA_invasion_in_syria:0 "Invasion in Levant"
  FRA_promise_independence_to_indochina:0 "Promise Independence to Indochina"
  FRA_prepare_coup_in_indochina:0 "Prepare Coup in Indochina"
  FRA_invasion_in_indochina:0 "Invasion in Indochina"
@@ -301,7 +301,7 @@
  FRA_promise_independence_to_madagascar:0 "Promise Independence to Madagascar"
  FRA_prepare_coup_in_madagascar:0 "Prepare Coup in Madagascar"
  FRA_decolonization:0 "Decolonization"
- FRA_independence_for_syria_mission:0 "Independence Movement in Syria"
+ FRA_independence_for_syria_mission:0 "Independence Movement in Levant"
  FRA_independence_for_indochina_mission:0 "Independence Movement in Indochina"
  FRA_independence_for_madagascar_mission:0 "Independence Movement in Madagascar"
  FRA_independence_for_north_africa_mission:0 "Independence Movement in North Africa"
