Update countries_l_english.yml (more syria

--- a/maddenist stuffs/localisation/english/countries_l_english.yml
+++ b/maddenist stuffs/localisation/english/countries_l_english.yml
@@ -1439,21 +1439,21 @@
  ICE:0 "Iceland"
  ICE_DEF:0 "Iceland"
  ICE_ADJ:0 "Icelandic"
- SYR_fascism:0 "Syrian National State"
- SYR_fascism_DEF:0 "the Syrian National State"
- SYR_democratic:0 "Syria"
- SYR_democratic_DEF:0 "Syria"
- SYR_neutrality:0 "Kingdom of Syria"
- SYR_neutrality_DEF:0 "the Kingdom of Syria"
- SYR_communism:0 "Socialist State of Syria"
- SYR_communism_DEF:0 "the Socialist State of Syria"
- SYR_fascism_ADJ:0 "Syrian"
- SYR_democratic_ADJ:0 "Syrian"
- SYR_neutrality_ADJ:0 "Syrian"
- SYR_communism_ADJ:0 "Syrian"
- SYR:0 "Syria"
- SYR_DEF:0 "Syria"
- SYR_ADJ:0 "Syrian"
+ SYR_fascism:0 "Levant National State"
+ SYR_fascism_DEF:0 "the Levant National State"
+ SYR_democratic:0 "Levant"
+ SYR_democratic_DEF:0 "Levant"
+ SYR_neutrality:0 "Kingdom of Levant"
+ SYR_neutrality_DEF:0 "the Kingdom of Levant"
+ SYR_communism:0 "Socialist State of Levant"
+ SYR_communism_DEF:0 "the Socialist State of Levant"
+ SYR_fascism_ADJ:0 "Levant"
+ SYR_democratic_ADJ:0 "Levant"
+ SYR_neutrality_ADJ:0 "Levant"
+ SYR_communism_ADJ:0 "Levant"
+ SYR:0 "Levant"
+ SYR_DEF:0 "Levant"
+ SYR_ADJ:0 "Levant"
  LEB_fascism:0 "Lebanon Free State"
  LEB_fascism_DEF:0 "the Lebanon Free State"
  LEB_democratic:0 "Lebanon"
